Bugfix: AAT-30,31,33 password still visible when mouse drags, temporary multi-language css re-alignment

--- a/src/mainClient/mainpage/MainPage.scss
+++ b/src/mainClient/mainpage/MainPage.scss
@@ -140,13 +140,14 @@ input.name-box {
         width: 100%;
         .left {
             width: 100%;
-            padding-right: 10px;
+            padding-right: 5px;
             input.name-left {
                 width: 100%;
             }
         }
         .right {
             width: 100%;
+            padding-left: 5px;
             input.name-right {
                 width: 100%;
             }
@@ -292,7 +293,7 @@ p.register-link {
     background-size: cover;
     background-image: url("../../img/car.png");
     background-position: center;
-    height: 50vh;
+    height: 55vh;
     margin-top: 8%;
 }
 .bigcontent {
